--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -473,6 +473,9 @@ on boot
     chmod 660 /dev/ttyGS1
     chown system radio /dev/ttyGS1
 
+    chown system system /sys/kernel/thunderquake_engine/level
+    chown 644 /sys/kernel/thunderquake_engine/level
+
     stop console
 
 on property:vold.decrypt=trigger_reset_main
