begonia: rootdir: Stop bootanimation service after boot
* Some users reported bootanimation lags and freezes
  after a while. Looking from logs it fails to exit
  once boot is completed. Stopping bootanimation
  service, as workaround, is preventing this issue.

Signed-off-by: DarkJoker360 <simoespo159@gmail.com>
Signed-off-by: 7Soldier <reg.fm4@gmail.com>

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -969,3 +969,6 @@ on property:persist.sys.begonia.dt2w=1
 on boot
     # Disable serial console
     stop console
+
+on property:sys.boot_completed=1
+    stop bootanim
